fix(iam): api_key: fix cassettes

--- a/scaleway/testdata/iam-api-key-expires.cassette.yaml
+++ b/scaleway/testdata/iam-api-key-expires.cassette.yaml
@@ -10,10 +10,10 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://agw.stg.fr-par-2.internal.scaleway.com/iam/v1alpha1/applications
+    url: https://api.scaleway.com/iam/v1alpha1/applications
     method: POST
   response:
-    body: '{"id":"b5d9f8c3-dc6d-4b8f-a989-0fa28a50cc17","name":"tf_tests_app_expires_at","description":"","created_at":"2022-07-06T14:24:37.322589Z","updated_at":"2022-07-06T14:24:37.322589Z","organization_id":"012eb4a7-a183-4fed-89fa-6ae2013bcf60","editable":true,"nb_api_keys":0}'
+    body: '{"id":"d1c3331a-7320-4f06-9507-b5c037257c11","name":"tf_tests_app_expires_at","description":"","created_at":"2022-07-06T14:36:17.372355Z","updated_at":"2022-07-06T14:36:17.372355Z","organization_id":"012eb4a7-a183-4fed-89fa-6ae2013bcf60","editable":true,"nb_api_keys":0}'
     headers:
       Content-Length:
       - "270"
@@ -22,7 +22,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Wed, 06 Jul 2022 14:24:37 GMT
+      - Wed, 06 Jul 2022 14:36:17 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -32,7 +32,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - fbe4ecf6-337c-441b-aa28-42747dc3e95f
+      - 987573f7-ac28-46e7-9579-eb0e434c9d46
     status: 200 OK
     code: 200
     duration: ""
@@ -43,10 +43,10 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://agw.stg.fr-par-2.internal.scaleway.com/iam/v1alpha1/applications/b5d9f8c3-dc6d-4b8f-a989-0fa28a50cc17
+    url: https://api.scaleway.com/iam/v1alpha1/applications/d1c3331a-7320-4f06-9507-b5c037257c11
     method: GET
   response:
-    body: '{"id":"b5d9f8c3-dc6d-4b8f-a989-0fa28a50cc17","name":"tf_tests_app_expires_at","description":"","created_at":"2022-07-06T14:24:37.322589Z","updated_at":"2022-07-06T14:24:37.322589Z","organization_id":"012eb4a7-a183-4fed-89fa-6ae2013bcf60","editable":true,"nb_api_keys":0}'
+    body: '{"id":"d1c3331a-7320-4f06-9507-b5c037257c11","name":"tf_tests_app_expires_at","description":"","created_at":"2022-07-06T14:36:17.372355Z","updated_at":"2022-07-06T14:36:17.372355Z","organization_id":"012eb4a7-a183-4fed-89fa-6ae2013bcf60","editable":true,"nb_api_keys":0}'
     headers:
       Content-Length:
       - "270"
@@ -55,7 +55,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Wed, 06 Jul 2022 14:24:37 GMT
+      - Wed, 06 Jul 2022 14:36:17 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -65,12 +65,12 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 2fd05b56-5442-4bc1-a175-42e64303bbab
+      - c87cf93e-9665-4e3b-9bd1-bc0e77b21d6a
     status: 200 OK
     code: 200
     duration: ""
 - request:
-    body: '{"application_id":"b5d9f8c3-dc6d-4b8f-a989-0fa28a50cc17","expires_at":"2025-07-06T09:00:00Z","default_project_id":null,"description":"an
+    body: '{"application_id":"d1c3331a-7320-4f06-9507-b5c037257c11","expires_at":"2025-07-06T09:00:00Z","default_project_id":null,"description":"an
       api key with an expiration date"}'
     form: {}
     headers:
@@ -79,11 +79,11 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://agw.stg.fr-par-2.internal.scaleway.com/iam/v1alpha1/api-keys
+    url: https://api.scaleway.com/iam/v1alpha1/api-keys
     method: POST
   response:
-    body: '{"access_key":"SCWYPYXMKMCRJF2E9N2E","secret_key":"10a66c5f-e102-4003-8600-d3a26cfe6be1","description":"an
-      api key with an expiration date","created_at":"2022-07-06T14:24:37.531158Z","updated_at":"2022-07-06T14:24:37.531158Z","expires_at":"2025-07-06T09:00:00Z","default_project_id":"012eb4a7-a183-4fed-89fa-6ae2013bcf60","editable":true,"creation_ip":"","application_id":"b5d9f8c3-dc6d-4b8f-a989-0fa28a50cc17"}'
+    body: '{"access_key":"SCWS3VAZYNR9RTDZJKBB","secret_key":"a0c9c647-fc82-44c8-b909-1d69bcc8020b","description":"an
+      api key with an expiration date","created_at":"2022-07-06T14:36:17.549229Z","updated_at":"2022-07-06T14:36:17.549229Z","expires_at":"2025-07-06T09:00:00Z","default_project_id":"012eb4a7-a183-4fed-89fa-6ae2013bcf60","editable":true,"creation_ip":"","application_id":"d1c3331a-7320-4f06-9507-b5c037257c11"}'
     headers:
       Content-Length:
       - "411"
@@ -92,7 +92,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Wed, 06 Jul 2022 14:24:37 GMT
+      - Wed, 06 Jul 2022 14:36:17 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -102,7 +102,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 7207d7e6-b097-43e9-9c99-e2ec84f8e255
+      - cf1e2579-da9f-4dcd-8843-e8b8011463b2
     status: 200 OK
     code: 200
     duration: ""
@@ -113,11 +113,11 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://agw.stg.fr-par-2.internal.scaleway.com/iam/v1alpha1/api-keys/SCWYPYXMKMCRJF2E9N2E
+    url: https://api.scaleway.com/iam/v1alpha1/api-keys/SCWS3VAZYNR9RTDZJKBB
     method: GET
   response:
-    body: '{"access_key":"SCWYPYXMKMCRJF2E9N2E","secret_key":null,"description":"an
-      api key with an expiration date","created_at":"2022-07-06T14:24:37.531158Z","updated_at":"2022-07-06T14:24:37.531158Z","expires_at":"2025-07-06T09:00:00Z","default_project_id":"012eb4a7-a183-4fed-89fa-6ae2013bcf60","editable":true,"creation_ip":"","application_id":"b5d9f8c3-dc6d-4b8f-a989-0fa28a50cc17"}'
+    body: '{"access_key":"SCWS3VAZYNR9RTDZJKBB","secret_key":null,"description":"an
+      api key with an expiration date","created_at":"2022-07-06T14:36:17.549229Z","updated_at":"2022-07-06T14:36:17.549229Z","expires_at":"2025-07-06T09:00:00Z","default_project_id":"012eb4a7-a183-4fed-89fa-6ae2013bcf60","editable":true,"creation_ip":"","application_id":"d1c3331a-7320-4f06-9507-b5c037257c11"}'
     headers:
       Content-Length:
       - "377"
@@ -126,7 +126,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Wed, 06 Jul 2022 14:24:37 GMT
+      - Wed, 06 Jul 2022 14:36:17 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -136,7 +136,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - f963337c-1d1b-41d2-b728-8d60d36e2f98
+      - c84a609e-0fd7-4354-9732-008f7b8bc18e
     status: 200 OK
     code: 200
     duration: ""
@@ -147,11 +147,11 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://agw.stg.fr-par-2.internal.scaleway.com/iam/v1alpha1/api-keys/SCWYPYXMKMCRJF2E9N2E
+    url: https://api.scaleway.com/iam/v1alpha1/api-keys/SCWS3VAZYNR9RTDZJKBB
     method: GET
   response:
-    body: '{"access_key":"SCWYPYXMKMCRJF2E9N2E","secret_key":null,"description":"an
-      api key with an expiration date","created_at":"2022-07-06T14:24:37.531158Z","updated_at":"2022-07-06T14:24:37.531158Z","expires_at":"2025-07-06T09:00:00Z","default_project_id":"012eb4a7-a183-4fed-89fa-6ae2013bcf60","editable":true,"creation_ip":"","application_id":"b5d9f8c3-dc6d-4b8f-a989-0fa28a50cc17"}'
+    body: '{"access_key":"SCWS3VAZYNR9RTDZJKBB","secret_key":null,"description":"an
+      api key with an expiration date","created_at":"2022-07-06T14:36:17.549229Z","updated_at":"2022-07-06T14:36:17.549229Z","expires_at":"2025-07-06T09:00:00Z","default_project_id":"012eb4a7-a183-4fed-89fa-6ae2013bcf60","editable":true,"creation_ip":"","application_id":"d1c3331a-7320-4f06-9507-b5c037257c11"}'
     headers:
       Content-Length:
       - "377"
@@ -160,7 +160,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Wed, 06 Jul 2022 14:24:37 GMT
+      - Wed, 06 Jul 2022 14:36:17 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -170,7 +170,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - f413277b-92c4-411c-b0b1-7b12d6d1c01f
+      - 1085d2c0-d5c7-4bb8-bc99-487831f83599
     status: 200 OK
     code: 200
     duration: ""
@@ -181,10 +181,10 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://agw.stg.fr-par-2.internal.scaleway.com/iam/v1alpha1/applications/b5d9f8c3-dc6d-4b8f-a989-0fa28a50cc17
+    url: https://api.scaleway.com/iam/v1alpha1/applications/d1c3331a-7320-4f06-9507-b5c037257c11
     method: GET
   response:
-    body: '{"id":"b5d9f8c3-dc6d-4b8f-a989-0fa28a50cc17","name":"tf_tests_app_expires_at","description":"","created_at":"2022-07-06T14:24:37.322589Z","updated_at":"2022-07-06T14:24:37.322589Z","organization_id":"012eb4a7-a183-4fed-89fa-6ae2013bcf60","editable":true,"nb_api_keys":1}'
+    body: '{"id":"d1c3331a-7320-4f06-9507-b5c037257c11","name":"tf_tests_app_expires_at","description":"","created_at":"2022-07-06T14:36:17.372355Z","updated_at":"2022-07-06T14:36:17.372355Z","organization_id":"012eb4a7-a183-4fed-89fa-6ae2013bcf60","editable":true,"nb_api_keys":1}'
     headers:
       Content-Length:
       - "270"
@@ -193,7 +193,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Wed, 06 Jul 2022 14:24:38 GMT
+      - Wed, 06 Jul 2022 14:36:18 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -203,7 +203,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 58a142d5-cc4d-45a3-b03a-9e0b52ebf147
+      - 273e6e4d-91d8-4e26-a0c6-cf49aa2c2b14
     status: 200 OK
     code: 200
     duration: ""
@@ -214,11 +214,11 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://agw.stg.fr-par-2.internal.scaleway.com/iam/v1alpha1/api-keys/SCWYPYXMKMCRJF2E9N2E
+    url: https://api.scaleway.com/iam/v1alpha1/api-keys/SCWS3VAZYNR9RTDZJKBB
     method: GET
   response:
-    body: '{"access_key":"SCWYPYXMKMCRJF2E9N2E","secret_key":null,"description":"an
-      api key with an expiration date","created_at":"2022-07-06T14:24:37.531158Z","updated_at":"2022-07-06T14:24:37.531158Z","expires_at":"2025-07-06T09:00:00Z","default_project_id":"012eb4a7-a183-4fed-89fa-6ae2013bcf60","editable":true,"creation_ip":"","application_id":"b5d9f8c3-dc6d-4b8f-a989-0fa28a50cc17"}'
+    body: '{"access_key":"SCWS3VAZYNR9RTDZJKBB","secret_key":null,"description":"an
+      api key with an expiration date","created_at":"2022-07-06T14:36:17.549229Z","updated_at":"2022-07-06T14:36:17.549229Z","expires_at":"2025-07-06T09:00:00Z","default_project_id":"012eb4a7-a183-4fed-89fa-6ae2013bcf60","editable":true,"creation_ip":"","application_id":"d1c3331a-7320-4f06-9507-b5c037257c11"}'
     headers:
       Content-Length:
       - "377"
@@ -227,7 +227,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Wed, 06 Jul 2022 14:24:38 GMT
+      - Wed, 06 Jul 2022 14:36:18 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -237,7 +237,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 8bab97e2-01a1-41cf-a258-2f3bf76cac6d
+      - 9e2ec0de-bf1e-46e2-b607-ed5cde8a582a
     status: 200 OK
     code: 200
     duration: ""
@@ -248,7 +248,7 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://agw.stg.fr-par-2.internal.scaleway.com/iam/v1alpha1/api-keys/SCWYPYXMKMCRJF2E9N2E
+    url: https://api.scaleway.com/iam/v1alpha1/api-keys/SCWS3VAZYNR9RTDZJKBB
     method: DELETE
   response:
     body: ""
@@ -258,7 +258,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Wed, 06 Jul 2022 14:24:38 GMT
+      - Wed, 06 Jul 2022 14:36:18 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -268,7 +268,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 26e8a2f5-a70c-46e3-8909-03939c79790a
+      - dbe724df-9d27-47b0-b77b-50ae11858369
     status: 204 No Content
     code: 204
     duration: ""
@@ -279,7 +279,7 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://agw.stg.fr-par-2.internal.scaleway.com/iam/v1alpha1/applications/b5d9f8c3-dc6d-4b8f-a989-0fa28a50cc17
+    url: https://api.scaleway.com/iam/v1alpha1/applications/d1c3331a-7320-4f06-9507-b5c037257c11
     method: DELETE
   response:
     body: ""
@@ -289,7 +289,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Wed, 06 Jul 2022 14:24:38 GMT
+      - Wed, 06 Jul 2022 14:36:18 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -299,7 +299,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 24b21d0b-7e3f-4f84-a05f-8327f37d36e3
+      - 2cd3ef1c-1535-4386-a89a-2736daee04b3
     status: 204 No Content
     code: 204
     duration: ""
@@ -310,10 +310,10 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://agw.stg.fr-par-2.internal.scaleway.com/iam/v1alpha1/api-keys/SCWYPYXMKMCRJF2E9N2E
+    url: https://api.scaleway.com/iam/v1alpha1/api-keys/SCWS3VAZYNR9RTDZJKBB
     method: GET
   response:
-    body: '{"message":"resource is not found","resource":"access_key","resource_id":"SCWYPYXMKMCRJF2E9N2E","type":"not_found"}'
+    body: '{"message":"resource is not found","resource":"access_key","resource_id":"SCWS3VAZYNR9RTDZJKBB","type":"not_found"}'
     headers:
       Content-Length:
       - "115"
@@ -322,7 +322,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Wed, 06 Jul 2022 14:24:38 GMT
+      - Wed, 06 Jul 2022 14:36:18 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -332,7 +332,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 5bc64727-1bc2-4a8e-8232-0985c53c1361
+      - b4aca38d-efaa-42b1-a412-6a8ce7c5494a
     status: 404 Not Found
     code: 404
     duration: ""
@@ -343,10 +343,10 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://agw.stg.fr-par-2.internal.scaleway.com/iam/v1alpha1/applications/b5d9f8c3-dc6d-4b8f-a989-0fa28a50cc17
+    url: https://api.scaleway.com/iam/v1alpha1/applications/d1c3331a-7320-4f06-9507-b5c037257c11
     method: GET
   response:
-    body: '{"message":"resource is not found","resource":"application","resource_id":"b5d9f8c3-dc6d-4b8f-a989-0fa28a50cc17","type":"not_found"}'
+    body: '{"message":"resource is not found","resource":"application","resource_id":"d1c3331a-7320-4f06-9507-b5c037257c11","type":"not_found"}'
     headers:
       Content-Length:
       - "132"
@@ -355,7 +355,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Wed, 06 Jul 2022 14:24:38 GMT
+      - Wed, 06 Jul 2022 14:36:18 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -365,7 +365,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 21f8128d-2fb3-4892-9c69-18d013e5ff65
+      - 78de72a0-b9e6-44d5-9661-b7a83031391d
     status: 404 Not Found
     code: 404
     duration: ""
