chore: add `Tem` in acceptance tests

--- a/.github/workflows/acceptance-tests.yaml
+++ b/.github/workflows/acceptance-tests.yaml
@@ -25,6 +25,7 @@ jobs:
           - Rdb
           - Redis
           - Registry
+          - Tem
           - VPC
     runs-on: ubuntu-latest
     steps:
