--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -26,6 +26,7 @@ jobs:
           - Rdb
           - Redis
           - Registry
+          - Tem
           - VPC
     runs-on: ubuntu-latest
     steps:
